# ANO

./: .gitignore  LICENSE  README.md  REVIEW.md  pyproject.toml
agent_framework/: __init__.py  base_agent.py
agent_framework/context/: __init__.py  context_builder.py  org_context.py
agent_framework/io/: __init__.py  validation.py
agent_framework/llm/: __init__.py  anthropic_backend.py  base_backend.py  local_backend.py  openai_backend.py
agents/: README.md  __init__.py
agents/agent_builder/: __init__.py  agent.py  certification.py  schemas.py
agents/ceo/: __init__.py  agent.py  skill.md
agents/chat_advisor/: __init__.py  agent.py  skill.md
agents/cto/: __init__.py  agent.py  skill.md
agents/optimizer/: __init__.py  agent.py  skill.md
agents/qa_specialist/: __init__.py  agent.py  skill.md
agents/researcher/: __init__.py  agent.py  skill.md
agents/security_reviewer/: __init__.py  agent.py  skill.md
agents/technical_writer/: __init__.py  agent.py  skill.md
ano_core/: __init__.py  environment.py  errors.py  logging.py  settings.py  types.py
channels/: QUICKSTART.md  __init__.py  base_channel.py
channels/cli/: __init__.py  repl.py
channels/telegram/: __init__.py  auth.py  config.py  (+3 more)
docs/: AGENT_BUILDER.md  ARCHITECTURE.md  DEPLOYMENT_CHANNELS.md  GETTING_STARTED.md  POLICY_ENGINE.md  PROFILES_AND_PLUGINS.md  TUTORIAL.md
examples/: agent_onboarding.py  cli_repl.py  pipeline_demo.py  registry_policy_demo.py  telegram_bot.py  web_chat.py
memory/: __init__.py  template.py  working_memory.py
pipeline/: __init__.py  coordinator.py  pipeline.py
plugins/: __init__.py
policy/: __init__.py  engine.py  gates.py  hooks.py  tier_policy.py
profiles/: __init__.py  loader.py
registry/: __init__.py  agent_registry.py  capability_registry.py  discovery.py
tests/: conftest.py  test_agent_framework.py  test_agents.py  test_ano_core.py  test_channels.py  test_memory.py  test_pipeline.py  test_policy.py  test_profiles.py  test_registry.py
(+7 files in other folders)
