[project]
name = "ano-foundation"
version = "0.1.0"
description = "Agent-Native Organization framework — build organizations of AI agents with governance, onboarding, and deployment channels"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "ANO Foundation Contributors"}]
keywords = ["agent-native", "multi-agent", "organization", "governance", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.24",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
telegram = ["fastapi>=0.100", "uvicorn>=0.20"]
all = ["openai>=1.0", "fastapi>=0.100", "uvicorn>=0.20"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/ano-foundation/ano-foundation"
Documentation = "https://github.com/ano-foundation/ano-foundation/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ano_core",
    "agent_framework",
    "registry",
    "policy",
    "pipeline",
    "memory",
    "channels",
    "profiles",
    "plugins",
    "agents",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
